--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,8 @@
   "short_name": "Advaita 2020",
   "name": "Advaita 2020",
   "start_url": ".",
-  "display": "standalone",
+  "display": "fullscreen",
+  "orientation": "portrait",
   "theme_color": "#000000",
   "background_color": "#ffffff"
 }
