--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "advaita-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-particles-js": "^2.7.0",
-    "react-scripts": "3.2.0",
-    "styled-components": "^4.4.1"
-  },
+  "name": "gulp-boilerplate",
+  "description": "A boilerplate template for HTML+SASS+ES6+Webpack+ImageMin with a dev server with live reloading and a production script to minify the shit out of it!",
+  "version": "1.1.0",
+  "author": "boxdox",
+  "license": "MIT",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "start": "gulp",
+    "build": "gulp build --prod"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/register": "^7.0.0",
+    "autoprefixer": "^9.4.3",
+    "babel-loader": "^8.0.4",
+    "browser-sync": "^2.26.3",
+    "cssnano": "^4.1.10",
+    "del": "^3.0.0",
+    "gulp": "^4.0.0",
+    "gulp-clean-css": "^4.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^5.0.3",
+    "gulp-postcss": "^8.0.0",
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.4",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack-merge": "^4.2.2",
+    "webpack-stream": "^5.2.1",
+    "yargs": "^12.0.5"
   },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {}
+  "dependencies": {}
 }
